2008-05-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm: when populating a DomainKey
   signature's identity, record where the identity came from
 * lib/Mail/DKIM/DkSignature.pm (identity_source): make the source of
   the identity (i.e. sender header or from header) available as a
   method

2008-05-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm (identity): do quoted-printable encoding/
   decoding for the i= tag (issue #1839015)
 * t/corpus/good_qp_1.txt, good_qp_2.txt, good_qp_3.txt: three test
   files for identities using quoted-printable encoding

2008-04-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: documentation for get_tag()

2008-04-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): do case-sensitive
   comparison (issue #1938112)

2008-04-14: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_12.txt: fix g= case-sensitivity test so it won't give
   false positives on dkim-milter
 * t/corpus/badkey_13.txt: test that the verifier checks granularity
   against i= tag, not the From header

2008-04-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm, rsa_sha1.pm: replace use of
   Digest::SHA1 with equivalent Digest::SHA
 * Makefile.PL: remove requirement for Digest::SHA1

2008-04-14: Jason Long <jlong@messiah.edu>
 * Makefile.PL: bump version

 -- VERSION 0.31 --

2008-04-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm: allow Cork argument to new() (#1879209)

2008-04-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkimPolicy.pm: fix "use of uninitialized value in string"
   errors
 * lib/Mail/DKIM/Signature.pm: provide public API to public-key object of
   signatures, e.g. so its flags can be accessed (issue #1879215);
   also, if an error occurs fetching the public-key record, the failure
   is cached so it won't get tried again
 * lib/Mail/DKIM/Signer.pm: document how to create a DomainKey-Signature
